加入换页,细小修改content

--- a/_config.yml
+++ b/_config.yml
@@ -16,5 +16,8 @@ redcarpet:
 #duoshuo
   comments :
     provider : duoshuo
-    duoshuo : 
+    duoshuo :
       short_name : taizilongxu
+
+#分页
+paginate: 15
