--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Limbo's Blog
 email: 468137306@qq.com
 description: "Python,HTML,CSS,Machine Leaning"
 baseurl: ""
-url: "http://taizilongxu.github.io"
+url: "http://hackerxu.com"
 
 # Build settings
 permalink: date
