--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Limbo's Blog
+title: Good night!
 email: 468137306@qq.com
 description: "Python,HTML,CSS,Machine Leaning"
 baseurl: ""
